@@ -1,154 +1,0 @@
-# This file tests the interp functions that work the same way
-# in both Jacl and Tcl Blend.
-#
-# This file contains a collection of tests for one or more of the Tcl
-# built-in commands.  Sourcing this file into Tcl runs the tests and
-# generates output for errors.  No output means no errors were found.
-#
-# Copyright (c) 1997 by Sun Microsystems, Inc.
-#
-# See the file "license.terms" for information on usage and redistribution
-# of this file, and for a DISCLAIMER OF ALL WARRANTIES.
-#
-# RCS: @(#) $Id: javaInterp.test,v 1.1 2006/02/16 08:44:34 mdejong Exp $
-
-if {[lsearch [namespace children] ::tcltest] == -1} {
-    package require tcltest
-    namespace import -force ::tcltest::*
-}
-
-setupJavaPackage
-
-set testConfig(jaclOnly) [expr {$tcljava(tcljava) == "jacl"}]
-
-proc test_lengths { args } {
-   global test_lengths
-   if {[llength $args] == 0} {return $test_lengths}
-   foreach arg $args {
-       lappend test_lengths [string length $arg]
-   }
-}
-
-set fd [open tl.tcl w]
-fconfigure $fd -translation binary -encoding binary
-puts $fd "test_lengths a b \\\r\nc d"
-close $fd
-
-
-test javaInterp-1.0 {Tcl IO layer filters CRLF to LF on read} {
-    catch {unset test_lengths}
-    source tl.tcl
-    test_lengths
-} {1 1 1 1}
-
-test javaInterp-1.1 {Tcl IO layer filters CRLF to LF on read} {jaclOnly} {
-    catch {unset test_lengths}
-    if {[testgetplatform] == "windows"} {
-        set url "file:/[file join [pwd] tl.tcl]"
-    } else {
-        set url "file://[file join [pwd] tl.tcl]"
-    }
-    source -url $url
-    test_lengths
-} {1 1 1 1}
-
-test javaInterp-1.2 {convert CRLF to LF in convertStringCRLF} {jaclOnly} {
-    catch {unset test_lengths}
-    set res [[java::getinterp] convertStringCRLF "test_lengths a b \\\r\nc d"]
-    eval $res
-    test_lengths
-} {1 1 1 1}
-
-test javaInterp-1.3 {source tl.tcl as resource from tl.jar} {
-    catch {unset test_lengths}
-    # Note: tl.jar appears on the system CLASSAPTH, so resource
-    # loading is done via the system class loader here.
-    source resource:/tl/tl.tcl
-    test_lengths
-} {1 1 1 1}
-
-test javaInterp-1.4 {load class defined on TCL_CLASSPATH, this makes use
-        the TclClassLoader to search for classes at runtime} {
-    # testext.jar must not appear on the CLASSPATH, it should not
-    # be loaded by the system class loader.
-    set env(TCL_CLASSPATH) [file join [pwd] testext.jar]
-    set cl [java::field testext.Dummy class]
-    set cloader [$cl getClassLoader]
-    set result [java::instanceof $cloader tcl.lang.TclClassLoader]
-    unset env(TCL_CLASSPATH) cl cloader
-    set result
-} {1}
-
-test javaInterp-1.5 {load command defined in a class file that appears
-        on the TCL_CLASSPATH. This test checks that the Extension
-        class makes use of the interp.classLoader to load a class} {
-    # testext.jar must not appear on the CLASSPATH, it should not
-    # be loaded by the system class loader.
-    set env(TCL_CLASSPATH) [file join [pwd] testext.jar]
-    java::call tcl.lang.Extension loadOnDemand \
-        [java::getinterp] \
-        "testext_cmd" \
-        "testext.Cmd"
-    if {[catch {testext_cmd} err]} {
-        set result [list $err]
-
-        # Error auto-loading, check to see if the
-        # TclClass loader actually know about this
-        # class and the Extension class is failing
-        # to use this info.
-        if {[catch {
-            set cl [java::field testext.Cmd class]
-        } err]} {
-            lappend result CLASS_NOT_FOUND
-        } else {
-            # No error, so class is known
-            lappend result CLASS_FOUND
-        }
-    } else {
-        set result $err
-        # It worked, just double check that the interp
-        # classloader is the loader for the class
-        set icl [[java::getinterp] getClassLoader]
-        set ocl [[java::field testext.Cmd class] getClassLoader]
-        if {$icl != $ocl} {
-            lappend result "LOADER_MISMATCH"
-        }
-        unset icl ocl
-    }
-    unset env(TCL_CLASSPATH)
-    set result
-} {OK}
-
-test javaInterp-1.6 {load resource via TclClassLoader} {
-    # Load resource from testext.jar on env(TCL_CLASSPATH)
-    # testext.jar must not appear on the CLASSPATH, it should not
-    # be loaded by the system class loader.
-    set env(TCL_CLASSPATH) [file join [pwd] testext.jar]
-    source resource:/testext/cmd.tcl
-    testext_resource_cmd
-} {OK}
-
-test javaInterp-1.7 {load context class via TclClassLoader} {
-    # Create a test thread and install a thread context
-    # loader. The interp class will make use of the context
-    # loader as the TclClassLoader parent, so classes
-    # available to the context loader can be seen.
-
-    [java::getinterp] createCommand test_interp_thread_context_class \
-        [java::new tests.TestInterpThreadContextClassCmd]
-
-    test_interp_thread_context_class    
-} {OK}
-
-
-# cleanup
-
-rename test_interp_thread_context_class {}
-rename test_lengths {}
-catch {unset test_lengths}
-
-catch {unset url}
-file delete -force tl.tcl
-
-::tcltest::cleanupTests
-return
